--- a/11 - REACTIVE FORMS/reative-forms/src/app/EXEMPLOS/form-group/form-group.component.html
+++ b/11 - REACTIVE FORMS/reative-forms/src/app/EXEMPLOS/form-group/form-group.component.html
@@ -22,7 +22,9 @@
     <br>
 
     <button type="submit" [disabled]="!pessoaForm.valid">Enviar</button>
+    <br>
 
+    <button (click)="alteracaoTotal()">Alteração Total</button>
     <p>Formulário válido: {{pessoaForm.valid}}</p>
     <p>Formulário Endereço válido: {{pessoaForm.get('endereco')?.valid}}</p>
 </form>
