--- a/11 - REACTIVE FORMS/reative-forms/src/app/EXEMPLOS/form-group/form-group.component.html
+++ b/11 - REACTIVE FORMS/reative-forms/src/app/EXEMPLOS/form-group/form-group.component.html
@@ -25,6 +25,10 @@
     <br>
 
     <button (click)="alteracaoTotal()">Alteração Total</button>
+    <br>
+
+    <button (click)="alteracaoParcial()">Alteração Parcial</button>
+    <br>
     <p>Formulário válido: {{pessoaForm.valid}}</p>
     <p>Formulário Endereço válido: {{pessoaForm.get('endereco')?.valid}}</p>
 </form>
