Como Adicionar e Remover FormGroups do FormArray

--- a/11 - REACTIVE FORMS/reative-forms/src/app/EXEMPLOS/form-array-com-group/form-array-com-group.component.html
+++ b/11 - REACTIVE FORMS/reative-forms/src/app/EXEMPLOS/form-array-com-group/form-array-com-group.component.html
@@ -1,5 +1,6 @@
 <form [formGroup]="musicasForm">
     <div formArrayName="musicas">
+        <button (click)="adicionarMusica()">Adicionar</button>
         <div *ngFor="let musica of musicas.controls; let i = index;" [formGroupName]="i">
             <label [for]="'titulo-' + i">Titulo:</label>
             <input type="text" [id]="'titulo-' + i" formControlName="titulo">
@@ -7,7 +8,7 @@
 
             <label [for]="'banda-' + i">Banda:</label>
             <input type="text" [id]="'banda-' + i" formControlName="banda">
-
+            <button (click)="removerMusica(i)">- Remover</button>
         </div>
 
         <p>Form Form Válido: {{musicasForm.valid}}</p>
