--- a/11 - REACTIVE FORMS/reative-forms/src/app/app.component.html
+++ b/11 - REACTIVE FORMS/reative-forms/src/app/app.component.html
@@ -2,4 +2,5 @@
 <!-- <app-validador-assincrono></app-validador-assincrono> -->
 <!--  <app-form-group></app-form-group> -->
 <!-- <app-form-array></app-form-array> -->
-<app-form-array-com-group></app-form-array-com-group>
+<!-- <app-form-array-com-group></app-form-array-com-group> -->
+<app-form-builder></app-form-builder>
