--- a/11 - REACTIVE FORMS/reative-forms/src/app/app.component.html
+++ b/11 - REACTIVE FORMS/reative-forms/src/app/app.component.html
@@ -3,4 +3,5 @@
 <!--  <app-form-group></app-form-group> -->
 <!-- <app-form-array></app-form-array> -->
 <!-- <app-form-array-com-group></app-form-array-com-group> -->
-<app-form-builder></app-form-builder>
+<!-- <app-form-builder></app-form-builder> -->
+<app-form-build-externo></app-form-build-externo>
