--- a/11 - REACTIVE FORMS/reative-forms/src/app/EXEMPLOS/form-build-externo/form-build-externo.component.html
+++ b/11 - REACTIVE FORMS/reative-forms/src/app/EXEMPLOS/form-build-externo/form-build-externo.component.html
@@ -1,1 +1,34 @@
-<p>form-build-externo works!</p>
+<form [formGroup]="pessoaForm" (ngSubmit)="onFormSubmit()">
+    <label for="name">Nome:</label>
+    <input type="text" id="name" formControlName="nome">
+    <p *ngIf="nomeControl.hasError('required')">
+        O nome é obrigátorio.
+    </p>
+    <br>
+
+    <label for="email">Email:</label>
+    <input type="text" id="email" formControlName="email">
+    <br>
+
+    <div formGroupName="endereco">
+        <h4>Endereço:</h4>
+
+        <label for="street">Rua:</label>
+        <input type="text" id="street" formControlName="rua">
+        <br>
+
+        <label for="number">Número:</label>
+        <input type="text" id="number" formControlName="numero">
+        <br>
+    </div>
+
+    <div formArrayName="musicas">
+        <h4>Músicas</h4>
+        <div *ngFor="let musica of musicas.controls; let i = index" >
+            <label [for]="'musica-'"+ i> Música {{i + 1}}:</label>
+            <input type="text" [id]="'musica'+i" [formControlName]="i" >
+        </div>
+    </div>
+
+    <button type="submit" [disabled]="!pessoaForm.valid">Enviar</button>
+</form>
