Como Criar um Formulário com Componentes Filhos

--- a/11 - REACTIVE FORMS/reative-forms/src/app/app.component.html
+++ b/11 - REACTIVE FORMS/reative-forms/src/app/app.component.html
@@ -5,4 +5,5 @@
 <!-- <app-form-array-com-group></app-form-array-com-group> -->
 <!-- <app-form-builder></app-form-builder> -->
 <!-- <app-form-build-externo></app-form-build-externo> -->
-<app-form-build-externo-com-service></app-form-build-externo-com-service>
+<!-- <app-form-build-externo-com-service></app-form-build-externo-com-service> -->
+ <app-form-comp-filhos></app-form-comp-filhos>
