Como Marcar o FormControl como Touched (markAsTouched)

--- a/11 - REACTIVE FORMS/reative-forms/src/app/app.component.html
+++ b/11 - REACTIVE FORMS/reative-forms/src/app/app.component.html
@@ -1,9 +1,10 @@
 <!-- <app-form-control></app-form-control> -->
 <!-- <app-validador-assincrono></app-validador-assincrono> -->
-<!--  <app-form-group></app-form-group> -->
+<!-- <app-form-group></app-form-group> -->
 <!-- <app-form-array></app-form-array> -->
 <!-- <app-form-array-com-group></app-form-array-com-group> -->
 <!-- <app-form-builder></app-form-builder> -->
 <!-- <app-form-build-externo></app-form-build-externo> -->
 <!-- <app-form-build-externo-com-service></app-form-build-externo-com-service> -->
- <app-form-comp-filhos></app-form-comp-filhos>
+<!-- <app-form-comp-filhos></app-form-comp-filhos> -->
+<app-mark-as-touched></app-mark-as-touched>
