--- a/11 - REACTIVE FORMS/reative-forms/src/app/app.component.html
+++ b/11 - REACTIVE FORMS/reative-forms/src/app/app.component.html
@@ -7,4 +7,5 @@
 <!-- <app-form-build-externo></app-form-build-externo> -->
 <!-- <app-form-build-externo-com-service></app-form-build-externo-com-service> -->
 <!-- <app-form-comp-filhos></app-form-comp-filhos> -->
-<app-mark-as-touched></app-mark-as-touched>
+<!-- <app-mark-as-touched></app-mark-as-touched> -->
+ <app-desafio-touched></app-desafio-touched>
