--- a/13 - ROTEAMENTO ESTÁTICO/aulas/1-roteamento-standalone/src/app/app.component.html
+++ b/13 - ROTEAMENTO ESTÁTICO/aulas/1-roteamento-standalone/src/app/app.component.html
@@ -1,13 +1,21 @@
 <div class="menu">
-  <div class="menu__item" routerLinkActive="menu__item--selected" #rlaPrimeiro="routerLinkActive">
-      <a class="menu__link" routerLink="/primeiro">
-        Primeiro {{rlaPrimeiro.isActive ? 'Ativado' : ''}}
-      </a>
+  <div class="menu__item" routerLinkActive="menu__item--selected" [routerLinkActiveOptions]="{exact: true}"
+    #rlaBase="routerLinkActive">
+    <a class="menu__link" routerLink="componentes">
+      BASE {{rlaBase.isActive ? 'Ativado' : ''}}
+    </a>
   </div>
-  <div class="menu__item" routerLinkActive="menu__item--selected" #rlaSegundo="routerLinkActive">
-      <a class="menu__link" routerLink="/segundo">
-        Segundo {{rlaSegundo.isActive ? 'Ativado': ''}}
-      </a>
+  <div class="menu__item" routerLinkActive="menu__item--selected" [routerLinkActiveOptions]="{exact: true}"
+    #rlaPrimeiro="routerLinkActive">
+    <a class="menu__link" routerLink="componentes/primeiro">
+      Primeiro {{rlaPrimeiro.isActive ? 'Ativado' : ''}}
+    </a>
+  </div>
+  <div class="menu__item" routerLinkActive="menu__item--selected" [routerLinkActiveOptions]="{exact: true}"
+    #rlaSegundo="routerLinkActive">
+    <a class="menu__link" routerLink="componentes/segundo">
+      Segundo {{rlaSegundo.isActive ? 'Ativado': ''}}
+    </a>
   </div>
 </div>
 
