Carregar Componente para Rota com Path Vazio

--- a/13 - ROTEAMENTO ESTÁTICO/aulas/1-roteamento-standalone/src/app/app.component.html
+++ b/13 - ROTEAMENTO ESTÁTICO/aulas/1-roteamento-standalone/src/app/app.component.html
@@ -1,4 +1,9 @@
 <div class="menu">
+  <div class="menu__item" routerLinkActive="menu__item--selected" [routerLinkActiveOptions]="{exact: true}">
+    <a class="menu__link" routerLink="/">
+      INICIAL
+    </a>
+  </div>
   <div class="menu__item" routerLinkActive="menu__item--selected" [routerLinkActiveOptions]="{exact: true}"
     #rlaBase="routerLinkActive">
     <a class="menu__link" routerLink="componentes">
