--- a/13 - ROTEAMENTO ESTÁTICO/aulas/1-roteamento-standalone/src/app/components/primeiro/primeiro.component.html
+++ b/13 - ROTEAMENTO ESTÁTICO/aulas/1-roteamento-standalone/src/app/components/primeiro/primeiro.component.html
@@ -1,1 +1,10 @@
 <p>primeiro works!</p>
+
+<a routerLink="filho-a">Filho A</a>
+
+<br>
+
+<a routerLink="filho-b">Filho B</a>
+
+<router-outlet></router-outlet>
+
