Desafio 2: Resolução Parte 8 - Criação dos Redirecionamentos do General

--- a/13 - ROTEAMENTO ESTÁTICO/desafios/2-desafio-plataforma-usuario/src/app/components/general/general.component.html
+++ b/13 - ROTEAMENTO ESTÁTICO/desafios/2-desafio-plataforma-usuario/src/app/components/general/general.component.html
@@ -1,13 +1,13 @@
 <!-- ================= Página de General ================= -->
 <div class="general">
     <div class="general__menu">
-        <div class="general__menu-item general__menu-item--selected">
+        <div class="general__menu-item" routerLink="basic" routerLinkActive="general__menu-item--selected">
             Básica
         </div>
-        <div class="general__menu-item">
+        <div class="general__menu-item" routerLink="contact" routerLinkActive="general__menu-item--selected">
             Contato
         </div>
-        <div class="general__menu-item">
+        <div class="general__menu-item" routerLink="address" routerLinkActive="general__menu-item--selected">
             Endereço
         </div>
     </div>
