--- a/13 - ROTEAMENTO ESTÁTICO/desafios/2-desafio-plataforma-usuario/src/app/components/notfound/notfound.component.html
+++ b/13 - ROTEAMENTO ESTÁTICO/desafios/2-desafio-plataforma-usuario/src/app/components/notfound/notfound.component.html
@@ -2,5 +2,5 @@
 <div class="not-found">
     <h1 class="not-found__code">404</h1>
     <p class="not-found__message">Ops, a página que você procura não foi encontrada.</p>
-    <button class="not-found__button">Ir para o Início</button>
+    <button class="not-found__button" routerLink="/">Ir para o Início</button>
 </div>
