--- a/14 - ROTEAMENTO DINÂMICO COM ROUTERLINK E @INPUT/aulas/1-roteamento-dinamico-input/src/app/components/users/users.component.html
+++ b/14 - ROTEAMENTO DINÂMICO COM ROUTERLINK E @INPUT/aulas/1-roteamento-dinamico-input/src/app/components/users/users.component.html
@@ -1,1 +1,6 @@
-<p>users works!</p>
+@for(user of usersList$ | async; track user){
+<div style="cursor: pointer;" [routerLink]="['/posts', user.id]">
+    <div>id: {{user.id}}</div>
+    <div>Nome: {{user.name}}</div>
+</div>
+}
