Como Acessar o Parâmetro Estático da URL com o @Input

--- a/14 - ROTEAMENTO DINÂMICO COM ROUTERLINK E @INPUT/aulas/1-roteamento-dinamico-input/src/app/components/posts/posts.component.html
+++ b/14 - ROTEAMENTO DINÂMICO COM ROUTERLINK E @INPUT/aulas/1-roteamento-dinamico-input/src/app/components/posts/posts.component.html
@@ -1,1 +1,4 @@
-<p>posts works!</p>
+@for(post of postList$ | async; track post;){
+    <div>titulo: {{post.title}}</div>
+    <div>conteudo: {{post.body}}</div>
+}
