--- a/14 - ROTEAMENTO DINÂMICO COM ROUTERLINK E @INPUT/aulas/1-roteamento-dinamico-input/src/app/components/users/users.component.html
+++ b/14 - ROTEAMENTO DINÂMICO COM ROUTERLINK E @INPUT/aulas/1-roteamento-dinamico-input/src/app/components/users/users.component.html
@@ -1,6 +1,13 @@
-@for(user of usersList$ | async; track user){
-<div style="cursor: pointer;" [routerLink]="['/posts', user.id]">
-    <div>id: {{user.id}}</div>
-    <div>Nome: {{user.name}}</div>
+<div style="display: flex;">
+    <div style="width: 50%;">
+        @for(user of usersList$ | async; track user){
+        <div style="cursor: pointer;" [routerLink]="['posts', user.id]">
+            <div>id: {{user.id}}</div>
+            <div>Nome: {{user.name}}</div>
+        </div>
+        }
+    </div>
+    <div style="width: 50%;">
+        <router-outlet></router-outlet>
+    </div>
 </div>
-}
