--- a/14 - ROTEAMENTO DINÂMICO COM ROUTERLINK E @INPUT/aulas/1-roteamento-dinamico-input/src/app/components/posts/posts.component.html
+++ b/14 - ROTEAMENTO DINÂMICO COM ROUTERLINK E @INPUT/aulas/1-roteamento-dinamico-input/src/app/components/posts/posts.component.html
@@ -1,4 +1,8 @@
+<router-outlet></router-outlet>
+
 @for(post of postList$ | async; track post;){
+<div style="padding: 10px;" [routerLink]="[post.id]">
     <div>titulo: {{post.title}}</div>
     <div>conteudo: {{post.body}}</div>
+</div>
 }
