Resolução do Desafio 1 Parte 10: Criação e Redirecionamento da Rota de Área

--- a/14 - ROTEAMENTO DINÂMICO COM ROUTERLINK E @INPUT/desafios/1-desafio-plataforma-visualizador-usuarios/src/app/components/users-list/users-list.component.html
+++ b/14 - ROTEAMENTO DINÂMICO COM ROUTERLINK E @INPUT/desafios/1-desafio-plataforma-visualizador-usuarios/src/app/components/users-list/users-list.component.html
@@ -1,6 +1,6 @@
 <h1>Lista de usuarios</h1>
 @for(user of usersList$ | async; track user){
-    <div style="padding: 10px; cursor: pointer;">
+    <div style="padding: 10px; cursor: pointer;" [routerLink]="['/user', user.id]">
         <div>Codigo: {{user.id}}</div>
         <div>Nome: {{user.name}}</div>
     </div>
