Resolução do Desafio 1 Parte 11: Recuperando os Dados do Usuário Selecionado

--- a/14 - ROTEAMENTO DINÂMICO COM ROUTERLINK E @INPUT/desafios/1-desafio-plataforma-visualizador-usuarios/src/app/components/user-container/user-container.component.html
+++ b/14 - ROTEAMENTO DINÂMICO COM ROUTERLINK E @INPUT/desafios/1-desafio-plataforma-visualizador-usuarios/src/app/components/user-container/user-container.component.html
@@ -1,1 +1,6 @@
-<p>user-container works!</p>
+@if(user$ | async; as user){
+<div style="padding: 10px;">
+    <div>Código: {{user.id}}</div>
+    <div>Código: {{user.name}}</div>
+</div>
+}
