Resolução do Desafio 1 Parte 12: Criação e Redirecionamento das Rotas Filhas

--- a/14 - ROTEAMENTO DINÂMICO COM ROUTERLINK E @INPUT/desafios/1-desafio-plataforma-visualizador-usuarios/src/app/components/user-container/user-container.component.html
+++ b/14 - ROTEAMENTO DINÂMICO COM ROUTERLINK E @INPUT/desafios/1-desafio-plataforma-visualizador-usuarios/src/app/components/user-container/user-container.component.html
@@ -4,3 +4,13 @@
     <div>Código: {{user.name}}</div>
 </div>
 }
+
+<div style="display: flex; justify-content: space-evenly;">
+    <a routerLink="/users-list">Usuarios</a>
+    <a routerLink="todos" routerLinkActive="item-selected">Todos</a>
+    <a routerLink="albums" routerLinkActive="item-selected">Albums</a>
+    <a routerLink="posts" routerLinkActive="item-selected">Posts</a>
+</div>
+
+
+<router-outlet></router-outlet>
