--- a/14 - ROTEAMENTO DINÂMICO COM ROUTERLINK E @INPUT/desafios/1-desafio-plataforma-visualizador-usuarios/src/app/components/user-container/components/todos/todos.component.html
+++ b/14 - ROTEAMENTO DINÂMICO COM ROUTERLINK E @INPUT/desafios/1-desafio-plataforma-visualizador-usuarios/src/app/components/user-container/components/todos/todos.component.html
@@ -1,1 +1,8 @@
-<p>todos works!</p>
+<h1>Todos</h1>
+
+@for(todo of todosList$ | async; track todo){
+    <div style="padding: 10px;">
+        <div>Titulo: {{todo.title}}</div>
+        <div>Finalizado: {{todo.completed ? 'Sim': 'Não'}}</div>
+    </div>
+}
