--- a/14 - ROTEAMENTO DINÂMICO COM ROUTERLINK E @INPUT/desafios/1-desafio-plataforma-visualizador-usuarios/src/app/components/user-container/components/albums/albums.component.html
+++ b/14 - ROTEAMENTO DINÂMICO COM ROUTERLINK E @INPUT/desafios/1-desafio-plataforma-visualizador-usuarios/src/app/components/user-container/components/albums/albums.component.html
@@ -1,1 +1,8 @@
-<p>albums works!</p>
+<h1>Albums</h1>
+
+@for(album of albumsList$ | async; track album){
+    <div style="padding: 10px;">
+        <div>Codigo: {{album.id}}</div>
+        <div>Titulo: {{album.title}}</div>
+    </div>
+}
