--- a/14 - ROTEAMENTO DINÂMICO COM ROUTERLINK E @INPUT/desafios/1-desafio-plataforma-visualizador-usuarios/src/app/components/user-container/components/posts/posts.component.html
+++ b/14 - ROTEAMENTO DINÂMICO COM ROUTERLINK E @INPUT/desafios/1-desafio-plataforma-visualizador-usuarios/src/app/components/user-container/components/posts/posts.component.html
@@ -1,1 +1,8 @@
-<p>posts works!</p>
+<h1>Posts</h1>
+
+@for(post of postsList$ | async; track post){
+<div style="padding: 10px;">
+    <div>Titulo: {{post.title}}</div>
+    <div>Conteudo: {{post.body}}</div>
+</div>
+}
