Resolução do Desafio 1 Parte 17: Recuperando os Dados do Post Selecionado

--- a/14 - ROTEAMENTO DINÂMICO COM ROUTERLINK E @INPUT/desafios/1-desafio-plataforma-visualizador-usuarios/src/app/components/user-container/components/post/post.component.html
+++ b/14 - ROTEAMENTO DINÂMICO COM ROUTERLINK E @INPUT/desafios/1-desafio-plataforma-visualizador-usuarios/src/app/components/user-container/components/post/post.component.html
@@ -1,1 +1,9 @@
-<p>post works!</p>
+<h1>Post:</h1>
+
+@if (post$ | async; as post){
+    <div style="padding: 1opx;">
+        <div>Titulo: {{post.title}} </div>
+        <div>Conteudo: {{post.body}} </div>
+        <div>Codigo: {{post.id}} </div>
+    </div>
+}
